[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Personal portfolio website"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
# Add other dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"